syntax = "proto3";

package user_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

option go_package = "github.com/vakhrushevk/auth-service/pkg/user_v1;user_v1";

service UserV1{
  rpc CreateUser(CreateUserRequest) returns(CreateUserResponse);
  rpc GetUserById(GetUserByIdRequest) returns (GetUserByIdResponse);
  rpc UpdateUser(UpdateUserRequest) returns (google.protobuf.Empty);
  rpc DeleteUserById(DeleteUserRequest) returns (google.protobuf.Empty);}

enum Role {
  UNKNOWN = 0;
  USER = 1;
  ADMIN = 2;
}

message CreateUserRequest{
  string name = 1;
  string email = 2;
  string password = 3;
  string password_confirm = 4;
  Role role = 5;
}
message CreateUserResponse{
  int64 id = 1;
}

message GetUserByIdRequest{
  int64 id = 1;
}

message GetUserByIdResponse {
  int64 id = 1;
  string name = 2;
  string email = 3;
  Role role = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message UpdateUserRequest {
  int64 id = 1;
  google.protobuf.StringValue name = 2;
  Role role = 3;
}

message DeleteUserRequest {
  int64 id = 1;
}